--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,15 @@
 }
 
 body {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    background-color: #333;
+  }
 }
